--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
     </head>
     <body>
         <p>Welcome to Kopernik Observatory & Science Center</p>
+        <nav>
+            <ul>
+                <li>About</li>
+                <li>Programs</li>
+                <li>Contact Us</li>
+            </ul>
+        </nav>
     </body>
 </html>
