Created Navbar and corresponding sections

--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     </head>
     <body>
         <p>Welcome to Kopernik Observatory & Science Center</p>
-        <nav>
+        <nav id="nav-bar">
             <ul>
-                <li>About</li>
-                <li>Programs</li>
-                <li>Contact Us</li>
+                <li><a href="#welcome-section">About</a></li>
+                <li><a href="#program-section">Programs</a></li>
+                <li><a href="#contact-section">Contact Us</a></li>
             </ul>
         </nav>
+        <section id="welcome-section">
+            <h1>Welcome to Kopernik Observatory. The premiere obseratory of NY.</h1>
+        </section>
+        <section id="program-section">
+
+        </section>
+        <section id="contact-section">
+
+        </section>
     </body>
 </html>
