--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Kopernik Observatory & Science Center</title>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width" initial-scale="1"/>
+<style type="text/css">
+
+</style>    
     </head>
     <body>
         <p>Welcome to Kopernik Observatory & Science Center</p>
