Added a paragraf to the description of the site

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         </nav>
         <section id="welcome-section">
             <h1>Welcome to Kopernik Observatory. The premiere obseratory of NY.</h1>
+            <p>The Kopernik Observatory & Science Center opened in 1974, built by Kopernik Society
+                of Brooe County, to commemorate the 500th anniversary of Mikolaj Kopernik, 
+                the man know as father of modern Astronomy.Since that time, hundreds of thousands 
+                of children and adults have experience the wonders of science thought the Observatory's 
+                programs.</p>
         </section>
         <section id="program-section">
 
