Updated introduction, uploaded the hero image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <p>Welcome to Kopernik Observatory & Science Center</p>
+        <img src="KopernikBuilding.jpg" alt="pictureObservatory" height="250px" width="400px">
         <nav id="nav-bar">
             <ul>
                 <li><a href="#welcome-section">About</a></li>
@@ -20,10 +21,14 @@
         <section id="welcome-section">
             <h1>Welcome to Kopernik Observatory. The premiere obseratory of NY.</h1>
             <p>The Kopernik Observatory & Science Center opened in 1974, built by Kopernik Society
-                of Brooe County, to commemorate the 500th anniversary of Mikolaj Kopernik, 
+                of Broome County, to commemorate the 500th anniversary of Mikolaj Kopernik, 
                 the man know as father of modern Astronomy.Since that time, hundreds of thousands 
                 of children and adults have experience the wonders of science thought the Observatory's 
                 programs.</p>
+            <p>Located atop a 1720 foot hill in Vestal, NY, 13 iles southwest of Binghaton, NY, 
+                the Observatory has been one of the best-sited and best-equipped public Observatories 
+                the Northeast of the United States. 
+            </p>
         </section>
         <section id="program-section">
 
