Corrected spelling mistake

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <section id="welcome-section">
-            <h1>Welcome to Kopernik Observatory. The premiere obseratory of NY.</h1>
+            <h1>Welcome to Kopernik Observatory. The premiere observatory of NY.</h1>
             <p>The Kopernik Observatory & Science Center opened in 1974, built by Kopernik Society
                 of Broome County, to commemorate the 500th anniversary of Mikolaj Kopernik, 
                 the man know as father of modern Astronomy.Since that time, hundreds of thousands 
