Added details to the description of the facility

--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
                 programs.</p>
             <p>Located atop a 1720 foot hill in Vestal, NY, 13 iles southwest of Binghaton, NY, 
                 the Observatory has been one of the best-sited and best-equipped public Observatories 
-                the Northeast of the United States. 
-            </p>
+                the Northeast of the United States.</p>
+            <p>The Kopernik Observatory is the first science laboratory facility in New York State designed for 
+                teachers, students K-12, and their families. Its mission is provide hands-on experience using 
+                telescopes, computers and other tools encouraging the discovery of the wonders of the Universe.</p>
         </section>
         <section id="program-section">
+            <ul>
+                <li>School Programs</li>
+                <li>Classes</li>
+                <li>Group Programs</li>
+                <li>Public Events</li>
+            </ul>
 
         </section>
         <section id="contact-section">
