Added Contact Information

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
 
         </section>
         <section id="contact-section">
+            <ul>
+                <li><p><a href="ddeskur@kopernik.org" >Drew Deskur</a>, Executive Director </p></li>
+                <li><p><a href="tbresee@kopernik.org">Tish Bresee</a>,School Programs Coordinator</p></li>
+                <li><p><a href="guydosh@binghamton.edu">Nicholas Guydosh</a>, PhD: Science Educator</p></li>
+            </ul>
 
         </section>
     </body>
