Added back to top link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </style>    
     </head>
     <body>
-        <p>Welcome to Kopernik Observatory & Science Center</p>
+        <p id="top">Welcome to Kopernik Observatory & Science Center</p>
         <img src="KopernikBuilding.jpg" alt="pictureObservatory" height="250px" width="400px">
         <nav id="nav-bar">
             <ul>
@@ -49,5 +49,6 @@
             </ul>
 
         </section>
+        <p><a href="#top">Back to top</a></p>
     </body>
 </html>
