--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <body>
         <p id="top">Welcome to Kopernik Observatory & Science Center</p>
         <img src="KopernikBuilding.jpg" alt="pictureObservatory" height="250px" width="400px">
+       <!-- <iframe src="https://www.youtube.com/watch?v=p8T2nPizkHY"></iframe>-->
         <nav id="nav-bar">
             <ul>
-                <li><a href="#welcome-section">About</a></li>
-                <li><a href="#program-section">Programs</a></li>
-                <li><a href="#contact-section">Contact Us</a></li>
+                <li><a style="text-decoration:none" href="#welcome-section">About</a></li>
+                <li><a style="text-decoration:none" href="#program-section">Programs</a></li>
+                <li><a style="text-decoration:none" href="#contact-section">Contact Us</a></li>
             </ul>
         </nav>
         <section id="welcome-section">
@@ -25,7 +26,7 @@
                 the man know as father of modern Astronomy.Since that time, hundreds of thousands 
                 of children and adults have experience the wonders of science thought the Observatory's 
                 programs.</p>
-            <p>Located atop a 1720 foot hill in Vestal, NY, 13 iles southwest of Binghaton, NY, 
+            <p>Located atop a 1720 foot hill in Vestal, NY, 13 miles southwest of Binghaton, NY, 
                 the Observatory has been one of the best-sited and best-equipped public Observatories 
                 the Northeast of the United States.</p>
             <p>The Kopernik Observatory is the first science laboratory facility in New York State designed for 
@@ -43,12 +44,12 @@
         </section>
         <section id="contact-section">
             <ul>
-                <li><p><a href="ddeskur@kopernik.org" >Drew Deskur</a>, Executive Director </p></li>
-                <li><p><a href="tbresee@kopernik.org">Tish Bresee</a>,School Programs Coordinator</p></li>
-                <li><p><a href="guydosh@binghamton.edu">Nicholas Guydosh</a>, PhD: Science Educator</p></li>
+                <li><p><a style="text-decoration:none"  href="ddeskur@kopernik.org" >Drew Deskur</a>, Executive Director </p></li>
+                <li><p><a style="text-decoration:none"  href="tbresee@kopernik.org">Tish Bresee</a>,School Programs Coordinator</p></li>
+                <li><p><a style="text-decoration:none"  href="guydosh@binghamton.edu">Nicholas Guydosh</a>, PhD: Science Educator</p></li>
             </ul>
 
         </section>
-        <p><a href="#top">Back to top</a></p>
+        <p><a style="text-decoration:none"  href="#top">Back to top</a></p>
     </body>
 </html>
