--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <p id="top">Welcome to Kopernik Observatory & Science Center</p>
-        <img src="KopernikBuilding.jpg" alt="pictureObservatory" height="250px" width="400px">
+        <img src="KopernikBuilding.jpg" alt="pictureObservatory" height="250px" width="device-width">
        <!-- <iframe src="https://www.youtube.com/watch?v=p8T2nPizkHY"></iframe>-->
         <nav id="nav-bar">
             <ul>
@@ -21,12 +21,12 @@
         </nav>
         <section id="welcome-section">
             <h1>Welcome to Kopernik Observatory. The premiere observatory of NY.</h1>
-            <p>The Kopernik Observatory & Science Center opened in 1974, built by Kopernik Society
+            <p>The Kopernik Observatory & Science Center opened in 1974, built by Kopernik Society 
                 of Broome County, to commemorate the 500th anniversary of Mikolaj Kopernik, 
-                the man know as father of modern Astronomy.Since that time, hundreds of thousands 
+                the man know as father of modern Astronomy. Since that time, hundreds of thousands 
                 of children and adults have experience the wonders of science thought the Observatory's 
                 programs.</p>
-            <p>Located atop a 1720 foot hill in Vestal, NY, 13 miles southwest of Binghaton, NY, 
+            <p>Located atop a 1720 foot hill in Vestal, NY, 13 miles southwest of Binghamton, NY, 
                 the Observatory has been one of the best-sited and best-equipped public Observatories 
                 the Northeast of the United States.</p>
             <p>The Kopernik Observatory is the first science laboratory facility in New York State designed for 
