--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Kopernik Observatory & Science Center</title>
         <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width" initial-scale="1"/>
-<style type="text/css">
-
-</style>    
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Kopernik Observatory & Science Center</title>
+        <link href="css/main.css" type="text/css" rel="stylesheet" media="screen"/>
+       
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.css" >
+        
     </head>
     <body>
         <p id="top">Welcome to Kopernik Observatory & Science Center</p>
