--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
         
     </head>
     <body>
+        <header>
         <p id="top">Welcome to Kopernik Observatory & Science Center</p>
-        <img src="KopernikBuilding.jpg" alt="pictureObservatory" height="250px" width="device-width">
-       <!-- <iframe src="https://www.youtube.com/watch?v=p8T2nPizkHY"></iframe>-->
-        <nav id="nav-bar">
+        <div class="logo">
+            <img src="KopernikBuilding.jpg" alt="pictureObservatory" height="250px" width="device-width">
+        </div>
+        <button class="nav-toggle" aria-label="navigation-button">
+                <span class="hamburger">
+                </span>
+        </button>
+        <nav class="nav-bar">
             <ul>
                 <li><a style="text-decoration:none" href="#welcome-section">About</a></li>
                 <li><a style="text-decoration:none" href="#program-section">Programs</a></li>
                 <li><a style="text-decoration:none" href="#contact-section">Contact Us</a></li>
             </ul>
         </nav>
+       <!-- <iframe src="https://www.youtube.com/watch?v=p8T2nPizkHY"></iframe>-->
+     </header>
+        
         <section id="welcome-section">
             <h1>Welcome to Kopernik Observatory. The premiere observatory of NY.</h1>
             <p>The Kopernik Observatory & Science Center opened in 1974, built by Kopernik Society 
