Added email addresses to contacts

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         </section>
         <section id="contact-section">
             <ul>
-                <li><p><a style="text-decoration:none"  href="ddeskur@kopernik.org" >Drew Deskur</a>, Executive Director </p></li>
-                <li><p><a style="text-decoration:none"  href="tbresee@kopernik.org">Tish Bresee</a>,School Programs Coordinator</p></li>
-                <li><p><a style="text-decoration:none"  href="guydosh@binghamton.edu">Nicholas Guydosh</a>, PhD: Science Educator</p></li>
+                <li><p><a style="text-decoration:none"  href="mailto:ddeskur@kopernik.org" >Drew Deskur</a>, Executive Director </p></li>
+                <li><p><a style="text-decoration:none"  href="mailto:tbresee@kopernik.org">Tish Bresee</a>,School Programs Coordinator</p></li>
+                <li><p><a style="text-decoration:none"  href="mailto:guydosh@binghamton.edu">Nicholas Guydosh</a>, PhD: Science Educator</p></li>
             </ul>
 
         </section>
