--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
         <p id="top">Welcome to Kopernik Observatory & Science Center</p>
         <div class="logo">
-            <img src="KopernikBuilding.jpg" alt="pictureObservatory" height="250px" width="device-width">
+            <img src="KopernikBuilding.jpg" alt="pictureObservatory" height="250px" width="100%">
         </div>
         <button class="nav-toggle" aria-label="navigation-button">
                 <span class="hamburger">
@@ -21,9 +21,9 @@
         </button>
         <nav class="nav-bar">
             <ul>
-                <li><a style="text-decoration:none" href="#welcome-section">About</a></li>
-                <li><a style="text-decoration:none" href="#program-section">Programs</a></li>
-                <li><a style="text-decoration:none" href="#contact-section">Contact Us</a></li>
+                <li class="list-item"><a style="text-decoration:none" href="#welcome-section">About</a></li>
+                <li class="list-item"><a style="text-decoration:none" href="#program-section">Programs</a></li>
+                <li class="list-item"><a style="text-decoration:none" href="#contact-section">Contact Us</a></li>
             </ul>
         </nav>
        <!-- <iframe src="https://www.youtube.com/watch?v=p8T2nPizkHY"></iframe>-->
@@ -60,6 +60,7 @@
             </ul>
 
         </section>
+
         <p><a style="text-decoration:none"  href="#top">Back to top</a></p>
     </body>
 </html>
