Tried in-line styling for font color of the li

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-        <p id="top">Welcome to Kopernik Observatory & Science Center</p>
+        <p id="top"><h1>Welcome to Kopernik Observatory & Science Center</h1></p>
         <div class="logo">
             <img src="KopernikBuilding.jpg" alt="pictureObservatory" height="250px" width="100%">
         </div>
@@ -21,7 +21,7 @@
         </button>
         <nav class="nav-bar">
             <ul>
-                <li class="list-item"><a style="text-decoration:none" href="#welcome-section">About</a></li>
+                <li class="list-item"><a style="text-decoration:none" color="black" href="#welcome-section">About</a></li>
                 <li class="list-item"><a style="text-decoration:none" href="#program-section">Programs</a></li>
                 <li class="list-item"><a style="text-decoration:none" href="#contact-section">Contact Us</a></li>
             </ul>
@@ -30,7 +30,7 @@
      </header>
         
         <section id="welcome-section">
-            <h1>Welcome to Kopernik Observatory. The premiere observatory of NY.</h1>
+            <h2>Welcome to Kopernik Observatory...The premiere observatory of NY.</h2>
             <p>The Kopernik Observatory & Science Center opened in 1974, built by Kopernik Society 
                 of Broome County, to commemorate the 500th anniversary of Mikolaj Kopernik, 
                 the man know as father of modern Astronomy. Since that time, hundreds of thousands 
@@ -43,6 +43,7 @@
                 teachers, students K-12, and their families. Its mission is provide hands-on experience using 
                 telescopes, computers and other tools encouraging the discovery of the wonders of the Universe.</p>
         </section>
+        
         <section id="program-section">
             <ul>
                 <li>School Programs</li>
